Adding Dell/HPE sample BOMs

--- a/services.html
+++ b/services.html
@@ -103,7 +103,26 @@
 <li>Chassis, CPU, Memory, Storage controller, Storage (HDD, SSD, or a combination of both), Boot drive, Network</li>
 </ul>
 <p class="mt-3">SEs are requested to submit a BOM (Bill of Materials)/Hardware details (full hardware configurations) for complete hardware validation in the below format. It is recommended to include the following details: Part number/SKU, Description, Quantity.</p>
-<p class="mt-3 text-sm">If there is a need to open a SWOQUAL project (software qualification) in Jira, then the SE Support team will create the ticket and involve the PM, also will keep the system engineer updated.</p>
+<div class="bg-purple-50 border border-purple-200 rounded-lg p-4">
+<h4 class="font-semibold text-md text-purple-900 mb-3">
+HW BOM Validation – Excel Templates
+</h4>
+<p class="text-sm text-gray-700 mb-4">
+SEs must submit a completed BOM using one of the approved Excel templates below. Ensure Part Number / SKU, Description, and Quantity are populated.
+</p>
+
+<div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+<a href="./files/Sample Dell BOM.xlsx"
+   class="block p-4 bg-white border border-gray-200 rounded-lg shadow-sm hover:border-purple-400 hover:bg-purple-50 transition">
+<p class="font-semibold text-gray-800">Dell BOM Validation – Generic Template</p>
+</a>
+
+<a href="./files/Sample HPE BOM.xlsx"
+   class="block p-4 bg-white border border-gray-200 rounded-lg shadow-sm hover:border-purple-400 hover:bg-purple-50 transition">
+<p class="font-semibold text-gray-800">HPE BOM Validation - Generic template</p>
+</a>
+</div>
+</div>
 </div>
 </div>
 </div>
