Modifying sample BOM path

--- a/services.html
+++ b/services.html
@@ -112,12 +112,12 @@ SEs must submit a completed BOM using one of the approved Excel templates below.
 </p>
 
 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-<a href="./files/Sample Dell BOM.xlsx"
+<a href="./documents/Sample Dell BOM.xlsx"
    class="block p-4 bg-white border border-gray-200 rounded-lg shadow-sm hover:border-purple-400 hover:bg-purple-50 transition">
 <p class="font-semibold text-gray-800">Dell BOM Validation – Generic Template</p>
 </a>
 
-<a href="./files/Sample HPE BOM.xlsx"
+<a href="./documents/Sample HPE BOM.xlsx"
    class="block p-4 bg-white border border-gray-200 rounded-lg shadow-sm hover:border-purple-400 hover:bg-purple-50 transition">
 <p class="font-semibold text-gray-800">HPE BOM Validation - Generic template</p>
 </a>
