Bullet form for HW BOM parts

--- a/services.html
+++ b/services.html
@@ -100,7 +100,13 @@
 <p class="font-bold text-yellow-800">Mandatory Information Required:</p>
 <p class="text-sm mt-2">Note: Mandatory Information required while submitting a ticket for HW BOM validation, without these the validation will not be valid.</p>
 <ul class="list-disc list-inside mt-2 text-yellow-700">
-<li>Chassis, CPU, Memory, Storage controller, Storage (HDD, SSD, or a combination of both), Boot drive, Network</li>
+<li>Chassis</li>
+<li>CPU</li>
+<li>Memory</li>
+<li>Storage Controller</li>
+<li>Storage (HDD / SSD / NVMe)</li>
+<li>Boot Drive</li>
+<li>Network</li>
 </ul>
 <p class="mt-3">SEs are requested to submit a BOM (Bill of Materials)/Hardware details (full hardware configurations) for complete hardware validation in the below format. It is recommended to include the following details: Part number/SKU, Description, Quantity.</p>
 <div class="bg-purple-50 border border-purple-200 rounded-lg p-4">
