--- a/overview.html
+++ b/overview.html
@@ -65,7 +65,7 @@
     <div class="container mx-auto pt-0 px-4 sm:px-6 lg:px-8">
         <div id="overview" class="content active mt-5">
             <div class="bg-white p-6 rounded-lg shadow-sm border border-gray-200">
-                <h2 class="text-2xl font-bold text-purple-700 mb-4">Welcome to WW SE Support</h2>
+                <h2 class="text-2xl font-bold text-purple-700 mb-4">Welcome to WW SE Support!</h2>
                 <p class="mb-4">Nutanix SE Support team is live globally and we are providing round the clock technical support. Nutanix partners can take advantage of the services and can offload the time consuming activities to us which will give you more time in the field with your customers. </p>
                 <div class="mt-6 bg-purple-50 border border-purple-200 rounded-lg p-4">
                     <h3 class="font-semibold text-lg text-purple-800 mb-3">Quick Links & Contact Info</h3>
@@ -81,7 +81,7 @@
              <div class="bg-white p-6 rounded-lg shadow-sm border border-gray-200 mt-6">
                 <h2 class="text-2xl font-bold text-purple-700 mb-4">SE Support Services List</h2>
                 <ul class="list-disc list-inside space-y-3">
-                    <li><strong>HW BOM Validation:</strong> Perform customer/prospects existing hardware compatibility check on AHV, also recommends component replacement of the existing HW to meet the AHV compatibility.</li>
+                    <li><strong>HW BOM Validation:</strong> Perform customer/prospects existing hardware compatibility check on AHV, and also recommend component replacement of the existing HW to meet the AHV compatibility.</li>
                     <li><strong>Architectural Diagram Creation:</strong> Creation of Technical Architectural Diagrams to visualize the Current vs Future Proposed Infrastructure and share with the account SE.</li>
                     <li><strong>Data Center Info Collection:</strong> Collects customer/prospects existing infra data collection and share with account team to create sizing BOM.</li>
                 </ul>
