--- a/ticketing.html
+++ b/ticketing.html
@@ -38,7 +38,7 @@
           </a>
           with the details associated with your request. Please share all the
           relevant information mentioned in the below process document under
-          services tab.
+          Services tab.
         </p>
 
       </div>
