--- a/services.html
+++ b/services.html
@@ -111,10 +111,10 @@
 <p class="mt-3">SEs are requested to submit a BOM (Bill of Materials)/Hardware details (full hardware configurations) for complete hardware validation in the below format. It is recommended to include the following details: Part number/SKU, Description, Quantity.</p>
 <div class="bg-purple-50 border border-purple-200 rounded-lg p-4">
 <h4 class="font-semibold text-md text-purple-900 mb-3">
-HW BOM Validation – Excel Templates
+HW BOM Validation – Sample Templates
 </h4>
 <p class="text-sm text-gray-700 mb-4">
-SEs must submit a completed BOM using one of the approved Excel templates below. Ensure Part Number / SKU, Description, and Quantity are populated.
+SEs must submit a completed BOM using one of the approved sample Excel templates below. Ensure Part Number / SKU, Description, and Quantity are populated.
 </p>
 
 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
